--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -37,7 +37,7 @@ body {
 	line-height: 1;
   /* SC edited*/
   /*background: url(images/bg.jpg);*/
-  background: url(bg.jpg);
+  background: url(george/bg.jpg);
 	background-size: cover;
 	font-family: pts-reg !important;
 	color: #898989;
