--- a/app/views/home_pages/landing.html.erb
+++ b/app/views/home_pages/landing.html.erb
@@ -6,7 +6,8 @@
           <div class="col-xs-7 col-sm-6 col-lg-3">
             <!-- logo section -->
             <div class="navbar-header">
-              <a class="navbar-brand" href="#"><img src="images/logo.png" alt="" /></a>
+              <a class="navbar-brand" href="#">
+                <%= image_tag("george/logo.png") %></a>
             </div>
             <!-- end logo section -->
           </div>
@@ -14,7 +15,16 @@
             <!-- header right section -->
             <div class="header-right">
               <div class="header-top-right">
-                <div class="text">Sign in with</div> <a href="#"><img src="images/icon-fb.png" alt="" /></a> <a href="#"><img src="images/icon-linkedin.png" alt="" /></a> <a href="#"><img src="images/icon-twitter.png" alt="" /></a> <a href="#"><img src="images/icon-gplus.png" alt="" /></a>
+                <div class="text">Sign in with</div> <a href="#">
+                  <!-- <img src="authorization_providers/icon-fb.png" alt="" /> -->
+                  <%= image_tag("authorization_providers/icon-fb.png") %>
+                </a> <a href="#">
+                  <%= image_tag("authorization_providers/icon-linkedin.png") %>
+                </a> <a href="#">
+                  <%= image_tag("authorization_providers/icon-twitter.png") %>
+                </a> <a href="#">
+                  <%= image_tag("authorization_providers/icon-gplus.png") %>
+                </a>
               </div>
               <div class="login-section">
                 <form class="form-inline" role="form">
